Revision history for perl distribution Convos

4.17 Not Released
 - Fix absolute URL to social image from CMS

4.16 2020-06-01T22:16:00+0900
 - Cannot load Module::Install directly

4.15 2020-06-01T22:07:00+0900
 - Add missing dependency

4.14 2020-06-01T21:56:00+0900
 - Add CMS functionality
 - Fixed highlight color for dark themes

4.13 2020-05-31T10:04:00+0900
 - Add light variant of "Nord" theme #476
   Contributor: Thibault Duponchelle
 - Add "Hacker" theme #479
   Contributor: Thibault Duponchelle
 - Add support for "OPER" command
 - Fix "Color scheme" dropdown reflect the options from the theme #482
   Contributor: Thibault Duponchelle
 - Fix "Notifications keywords" text field value has new value after saving
   user account #485 #486
 - Fix description in site.webmanifest.ep
 - Fix font awesome cache issue
 - Fix toggling message details
 - Fix not making pictures from https://convos.chat gargantic
 - Changed "/raw" to "/quote"
 - Changed to always sending "/quote" messages from connection conversation

4.12 2020-05-25T10:04:00+0900
 - Fix unread count styling on small screens

4.11 2020-05-25T09:55:00+0900
 - Fix upload files button in chat-input
 - Add animations to some of the buttons

4.10 2020-05-24T12:32:00+0900
 - Fix sending WeBRTC signals between private conversations

4.09 2020-05-24T12:17:00+0900
 - Avoid hearing yourself locally through video chat
 - Can toggle WebRTC connection info by clicking on participant nick
 - Fix accepting calls in private conversations
 - Fix rendering of main menu on small screens
 - Fix making the chat input field stand out on small screens

4.08 2020-05-23T15:32:00+0900
 - Add EXPERIMENTAL video support #204
 - Will send desktop notification on video call #472
 - Add support for parsing "ahq" user modes #471
 - Add "South" theme #469
   Contributor: Thibault Duponchelle
 - Fix not forgetting theme settings when browsere is closed
 - Fix how unread count is presented/calculated #470