@@ -6,12 +6,11 @@ requires "File::ReadBackwards"            => "1.05";
 requires "IRC::Utils"                     => "0.12";
 requires "JSON::Validator"                => "3.24";
 requires "LinkEmbedder"                   => "1.12";
-requires "Module::Install"                => "1.10"; # required by Text::MultiMarkdown
 requires "Mojolicious"                    => "8.38";
 requires "Mojolicious::Plugin::OpenAPI"   => "3.30";
 requires "Mojolicious::Plugin::Webpack"   => "0.12";
 requires "Parse::IRC"                     => "1.22";
-requires "Text::MultiMarkdown"            => "1.00";
+requires "Text::Markdown"                 => "1.00";
 requires "Time::Piece"                    => "1.20";
 requires "Unicode::UTF8"                  => "0.62";
 
