@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 4.17 Not Released
  - Fix absolute URL to social image from CMS
+ - Replaced Text::MultiMarkdown with Text::Markdown since it is easier to install
 
 4.16 2020-06-01T22:16:00+0900
  - Cannot load Module::Install directly
